syntax = "proto3";

package awesome;

option go_package = "github.com/vendor116/awesome/pkg/api/awesome";

service Awesome {
  rpc GetVersionV1(GetVersionV1Request) returns (GetVersionV1Response);
}

message GetVersionV1Request {}

message GetVersionV1Response {
  string version = 1;
}

